--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "reselect": "^4.0.0",
+    "use-debounce": "^6.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
